# forge

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LEARNINGS.md  README.md  SCORING-INSIGHTS.md  TASK-SYSTEM.md
.agent/: CONTEXT.md  DECISIONS.md  ERRORS.md  LOG.md
.github/workflows/: ci.yml
agents/orchestrator/: AGENT.md
agents/planner-critic/: AGENT.md
agents/pm/: AGENT.md
agents/reviewer/: AGENT.md
agents/security/: AGENT.md
agents/ui-designer/: AGENT.md
agents/worker/: AGENT.md
api/: api.py  forge-api.service  pyproject.toml
bot/: bot.py  config.py  forge-bot.service  modal_sessions.py  notify_endpoint.py  pyproject.toml  sessions.py  test_claude_relay.py  test_sessions.py  test_testing_mode.py
bot/handlers/: claude_mode.py  commands.py  conversations.py
bot/services/: claude_relay.py  forge_api.py  formatting.py  llm.py
bot/tests/: test_claude_mode.py  test_claude_relay.py  test_modal_sessions.py
claude-skills/forge-orchestrator/: SKILL.md
claude-skills/forge-reviewer/: SKILL.md
claude-skills/forge-security/: SKILL.md
claude-skills/forge-worker/: SKILL.md
scripts/: cleanup-omnilingo.sh  forge  forge-adopt  forge-adopt.sh  forge-board  forge-board.sh  forge-check-orphans.sh  forge-cleanup.sh  forge-deploy.sh  forge-doctor  forge-doctor.sh  forge-e2e-report.py  forge-e2e.sh  forge-init  forge-init.sh  forge-notify-event.sh  forge-notify.sh  forge-plan  forge-plan.sh  forge-prd-to-issues.sh  forge-promote  forge-promote.sh  forge-run  forge-run.sh  forge-security-scan  forge-security-scan.sh  forge-status  forge-status.sh  forge-worker  forge-worker.sh  verify-no-tasks-dir.sh
spec/: BACKLOG.md  MVP.md
templates/: smoke-test.sh
templates/github-actions/: forge-ci.yml
templates/project-scaffold/: CLAUDE.md.template
templates/project-scaffold/.agent/: CONTEXT.md  LOG.md  NOTES.md  STEERING.md
templates/project-scaffold/spec/: BACKLOG.md.template  MVP.md.template
templates/stacks/: fastapi.md  nextjs.md  python-cli.md  react-spa.md  typescript-lib.md
templates/staging/: docker-compose.staging.postgres.yml  docker-compose.staging.sqlite.yml
